# translation-skill

./: .gitignore  README.md
zh-tw-document-localization/: .env.example  SKILL.md  pyproject.toml  requirements.txt
zh-tw-document-localization/agents/: openai.yaml
zh-tw-document-localization/references/: format-notes.md  universal-design.md
zh-tw-document-localization/scripts/: agent_pipeline.py  localize.py  rename_output.py
