[project]
name = "zh-tw-document-localization"
version = "0.1.0"
description = "Universal high-fidelity document localization skill for PDF/Markdown/DOCX/PPTX (zh-tw)."
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
  "typer>=0.12.5",
  "rich>=13.9.0",
  "openai>=1.51.2",
  "opencc-python-reimplemented>=0.1.7",
  "python-docx>=1.1.2",
  "python-pptx>=0.6.23",
  "pymupdf>=1.24.10",
  "pypdf>=5.0.1",
  "pdfplumber>=0.11.4",
  "markdown-it-py>=3.0.0",
  "pyyaml>=6.0.2",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.13",
  "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "python-dotenv>=1.2.2",
  "ruff>=0.6.9",
]

[tool.uv]
package = false
